--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+on-mitgliedsantrag (1.4) bionic; urgency=medium
+
+  * compatible with new libphpmailer version 
+
+ -- Martin Garbe <leo@lini.local>  Sat, 12 Oct 2019 22:12:12 +0200
+
 on-mitgliedsantrag (1.3) bionic; urgency=medium
 
   * make the need to sign the document more explicit 
