www: bump php-iban to v4.2.1 release
To be complaint with current php versions we upgrade the included php-iban to the v4.2.1 tagged release from https://github.com/globalcitizen/php-iban/releases

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+on-mitgliedsantrag (1.7) focal; urgency=medium
+
+  * bump php-iban to v4.2.1 release
+
+ -- Mathias Mahnke <mathias@opennet>  Fri, 26 Jan 2024 21:16:92 +0100
+
 on-mitgliedsantrag (1.6) focal; urgency=medium
 
   * change url of documents 
